@@ -1,3 +1,7 @@
+2007-12-27  Herbert Xu <herbert@gondor.apana.org.au>
+
+	* Add FAKEEOFMARK for expandstr.
+
 2007-12-23  Gerrit Pape <pape@smarden.org>
 
 	* If imaxdiv() isn't available, use / and % operators.
